--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -45,7 +45,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_enemy_2"
-        app:srcCompat="@drawable/ic_volume_up" />
+        app:srcCompat="@drawable/ic_volume_up"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/img_enemy_2"
@@ -56,7 +57,8 @@
         app:layout_constraintBottom_toTopOf="@+id/img_enemy_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_enemy_3"
-        app:srcCompat="@drawable/ic_volume_up" />
+        app:srcCompat="@drawable/ic_volume_up"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/img_enemy_3"
@@ -67,7 +69,8 @@
         app:layout_constraintBottom_toTopOf="@+id/img_enemy_2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_coin_1"
-        app:srcCompat="@drawable/ic_volume_up" />
+        app:srcCompat="@drawable/ic_volume_up"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/img_coin_1"
@@ -78,7 +81,8 @@
         app:layout_constraintBottom_toTopOf="@+id/img_enemy_3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_coin_2"
-        app:srcCompat="@drawable/ic_volume_up" />
+        app:srcCompat="@drawable/ic_volume_off"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/img_coin_2"
@@ -90,7 +94,8 @@
         app:layout_constraintBottom_toTopOf="@+id/img_coin_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_volume_up" />
+        app:srcCompat="@drawable/ic_volume_off"
+        tools:visibility="visible" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -101,7 +106,8 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible">
 
         <ImageView
             android:id="@+id/imgHart1"
