--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -5,6 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context="com.android.birds.GameActivity">
 
     <TextView
@@ -30,10 +31,11 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="64dp"
         android:layout_marginTop="8dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_volume_up" />
+        app:srcCompat="@drawable/player" />
 
     <ImageView
         android:id="@+id/img_enemy_1"
@@ -41,11 +43,12 @@
         android:layout_height="50dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
+        android:scaleX="-1"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_enemy_2"
-        app:srcCompat="@drawable/ic_volume_up"
+        app:srcCompat="@drawable/enemy1"
         tools:visibility="visible" />
 
     <ImageView
@@ -53,11 +56,12 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginEnd="8dp"
+        android:scaleX="-1"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/img_enemy_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_enemy_3"
-        app:srcCompat="@drawable/ic_volume_up"
+        app:srcCompat="@drawable/enemy2"
         tools:visibility="visible" />
 
     <ImageView
@@ -65,11 +69,12 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginEnd="8dp"
+        android:scaleX="-1"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/img_enemy_2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_coin_1"
-        app:srcCompat="@drawable/ic_volume_up"
+        app:srcCompat="@drawable/enemy3"
         tools:visibility="visible" />
 
     <ImageView
@@ -77,11 +82,12 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginEnd="8dp"
+        android:padding="8dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/img_enemy_3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_coin_2"
-        app:srcCompat="@drawable/ic_volume_off"
+        app:srcCompat="@drawable/coin"
         tools:visibility="visible" />
 
     <ImageView
@@ -90,11 +96,12 @@
         android:layout_height="50dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
+        android:padding="8dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/img_coin_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_volume_off"
+        app:srcCompat="@drawable/coin"
         tools:visibility="visible" />
 
     <LinearLayout
@@ -134,13 +141,13 @@
 
     <ImageView
         android:id="@+id/img_coin_main"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_favorite" />
+        app:srcCompat="@drawable/coin" />
 
     <TextView
         android:id="@+id/tv_coin"
